apps/ext/sonarr/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sonarr
  namespace: ext
subsets:
- addresses:
  - ip: 10.0.0.10
  ports:
  - name: app
    port: 9989
    protocol: TCP
