apps/ext/sonarr/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: ext
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 9989
  clusterIP: None
  type: ClusterIP
