apps/ext/sonarr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: sonarr-http
 namespace: ext
spec:
 entryPoints:
  - web
 routes:
  - match: Host(`sonarr.absolutist.it`) || Host(`sonarr.wahoo.li`)
    kind: Rule
    middlewares:
    - name: https-only
      namespace: traefik
    services:
     - name: sonarr
       port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: sonarr-https
 namespace: ext
spec:
 entryPoints:
  - websecure
 routes:
  - match: Host(`sonarr.absolutist.it`) || Host(`sonarr.wahoo.li`)
    kind: Rule
    priority: 10
    middlewares:
    - name: forwarded-proto-https
      namespace: traefik
    - name: gzip
      namespace: traefik
    - name: authentik
      namespace: traefik
    services:
     - name: sonarr
       scheme: http
       port: 80
 tls:
  secretName: tls-sonarr-ingress
